# b2cli

./: .env.example  .gitignore  API_DESIGN.md  CLAUDE.md  Cargo.toml  LICENSE  PRODUCT_FOCUS.md  PROJECT_VISION.md  README.md  ROADMAP.md  docker-compose.yml
migrations/: 20250731180000_create_backup_jobs_table.sql  20250731200000_change_source_path_to_jsonb.sql  20250801100000_change_id_to_uuid.sql  20250801110000_change_destination_path_to_jsonb.sql  20250801120000_change_to_mappings.sql  20250801130000_add_audit_columns.sql  20250801140000_create_backed_up_files_table.sql  20250801150000_add_status_to_backup_jobs.sql  20250801160000_add_is_active_to_backup_jobs.sql  20250802170000_create_backup_schedules.sql  20250802203000_create_backup_execution_logs.sql  20250803130000_create_cloud_providers.sql  20250804100000_create_file_catalog.sql  20250804200000_create_file_history.sql  20250804210000_create_scan_schedules.sql  20250804220000_create_scan_configs.sql
src/: archiver.rs  backup_worker.rs  config_manager.rs  crypto.rs  db.rs  file_scanner.rs  lib.rs  logging.rs  main.rs  models.rs  rclone.rs  scheduler.rs
src/routes/: archive.rs  backups.rs  files.rs  health.rs  logs.rs  mod.rs  providers.rs  readiness.rs  scan_schedules.rs
test_scan_data/: README.md
test_scan_data/cache/: app.cache
test_scan_data/code/javascript/: dashboard.js
test_scan_data/code/python/: ai_file_classifier.py
test_scan_data/code/rust/: backup_engine.rs
test_scan_data/code/sql/: backup_reports.sql
test_scan_data/config/docker/: docker-compose.yml
test_scan_data/config/nginx/: nginx.conf
test_scan_data/documents/contracts/: acordo_aws.docx
test_scan_data/documents/presentations/: apresentacao_board.pptx
test_scan_data/documents/reports/: relatorio_financeiro_q1_2025.xlsx
tests/: api_integration.rs  end_to_end.rs  providers_unit_test.rs
tests/common/: mod.rs
