[package]
name = "b2cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "json", "uuid"] }
tokio = { version = "1.47.1", features = ["full", "io-util"] }
sha2 = "0.10.8"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-appender = "0.2"
tokio-cron-scheduler = "0.14.0"
cron = "0.12"
flate2 = "1.0.35"

[dev-dependencies]
tower = "0.5"
hyper = "1.0"
http-body-util = "0.1"
tempfile = "3.8"
tokio-test = "0.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "json", "uuid", "migrate"] }
